# klash

./: .gitignore  CMakeLists.txt  README.md
clash/: build_clash.py  config.go  go.mod  klash_bridge.c  klash_bridge.h  log.go  main.go  proxies.go  rules.go
src/: CMakeLists.txt  lib_assets.qrc  main.cpp  main.qml  qml.qrc
src/helpers/: ClashCoreHelper.cpp  ClashCoreHelper.h  DesktopProxyHelper.h  MacOSDesktopProxyHelper.h  MobileProxyHelper.h  SystemProxyHelper.h  UnixDesktopProxyHelper.h  WindowsDesktopProxyHelper.h
src/log/: KlashRedirectLog.cpp  KlashRedirectLog.h
src/views/: DesktopSidebar.qml  MainView.qml
